--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "functional": "cpp",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "typeinfo": "c",
+        "compare": "c",
+        "type_traits": "c"
     }
 }
