--- a/src/utils/complex/project.yml
+++ b/src/utils/complex/project.yml
@@ -103,7 +103,6 @@
     - ./**
   :include:
     - ./** # In simple projects, this entry often duplicates :source
-    - -:examples/**
   :support:
     - test/support
   :libraries: []
@@ -202,7 +201,7 @@
 # Configuration options specific to Unity. 
 :unity:
   :defines:
-    - UNITY_EXCLUDE_FLOAT
+    # - UNITY_EXCLUDE_FLOAT
 
 # You can optionally have ceedling create environment variables for you before
 # performing the rest of its tasks.
@@ -223,7 +222,8 @@
   :placement: :end
   :flag: "-l${1}"
   :path_flag: "-L ${1}"
-  :system: []    # for example, you might list 'm' to grab the math library
+  :system: 
+    - m
   :test: []
   :release: []
 
